Ensure window border icons repaint when DWM is enabled

When the user movers the cursor over the minimize/maximize/close
buttons, DWM paints them in a hover state. If the user subsequently
moves the cursor out of the window, DWM was not repainting the icons
with the unhovered state because Chrome ate the WM_NCMOUSELEAVE
message.This change notifies DWM of the exit.

BUG=637114
TEST=Unmaximize Chrome. Hover Red-X at top right. Fling mouse upward.

R=sky@chromium.org

Review-Url: https://codereview.chromium.org/2244263002
Cr-Commit-Position: refs/heads/master@{#412541}

Former-commit-id: 7af2fc83ecab219d9d2902db766ab0d2ba4dabf1